# swarm-imitate

./: .gitignore  LICENSE  README.md  debug_agents.ipynb  eval_agents.ipynb  pyproject.toml  train_agents.py  train_imitate.ipynb
src/swarmi/: game.py  net.py  operators.py  plot.py  rl.py  utils.py
