[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmi"
requires-python = ">=3.8"
dependencies = ["torch==1.13.1", "ipykernel", "matplotlib", "pandas", "numpy<2", "pre-commit", "tqdm", "scikit-learn"]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | build
  | dist
  | \.eggs
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--verbose"
norecursedirs = ["dist", "build", ".tox", "tests/"]
testpaths = "tests"
python_functions = "should_*"

[tool.mypy]
ignore_missing_imports = true
